<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="pref_weazr_update_rate_key"
        android:summary="@string/pref_weazr_update_rate_summ"
        android:title="@string/pref_weazr_update_rate_title"
        android:dialogTitle="@string/pref_weazr_update_rate_title"
        android:entries="@array/pref_weazr_update_rate_entries"
        android:entryValues="@array/pref_weazr_update_rate_entries_values"
        android:defaultValue="@string/pref_weazr_update_rate_default_values" />
    <ListPreference
        android:key="pref_temp_unit"
        android:title="@string/pref_weazr_temp_unit_title"
        android:summary="@string/pref_weazr_temp_unit_summ"
        android:dialogTitle="@string/pref_weazr_temp_unit_title"
        android:entries="@array/pref_weazr_temp_unit_entries"
        android:entryValues="@array/pref_weazr_temp_unit_entries_values"
        android:defaultValue="@string/pref_weazr_temp_unit_default_values" />
    <CheckBoxPreference
            android:key="pref_weazr_run_bg_key"
            android:title="@string/pref_weazr_run_bg_title"
            android:summary="@string/pref_weazr_run_bg_summ"
            android:defaultValue="true" />
    <CheckBoxPreference
        android:key="pref_weazr_reboot_key" 
        android:title="@string/pref_weazr_reboot_title"
        android:summary="@string/pref_weazr_reboot_summ"
        android:defaultValue="true" />
</PreferenceScreen>